# treadmill

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  memory-nrf52840.x
.cargo/: config.toml
firmware/: Cargo.toml
firmware/src/: central.rs  main.rs  peripheral.rs  scanner.rs
ftms-rsc/: Cargo.toml
ftms-rsc/src/: lib.rs  rsc.rs
src/: central.rs  ftms.rs  main.rs  peripheral.rs  rsc.rs  scanner.rs
utils/: Cargo.toml
